--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./src/style.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700&display=swap" rel="stylesheet">
+
   <title>Slide Stories</title>
 </head>
 
@@ -22,6 +27,19 @@
 
     <div id="slide-controls"></div>
   </div>
+
+  <div id="file">
+    <div id="file-buttons">
+      <label for="file-input" id="file-label">Escolher arquivo</label>
+      <input type="file" id="file-input" accept="image/*, video/*">
+      <button id="file-button" disabled>Enviar</button>
+    </div>
+
+    <div id="file-info">
+      <p class="file-text">Arquivo selecionado: <span id="file-name"></span></p>
+    </div>
+  </div>
+
 
   <script type="module" src="./dist/script.js"></script>
 </body>
