--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700&display=swap" rel="stylesheet">
 
+  <link rel="shortcut icon" href="./src/assets/favicon.ico" type="image/x-icon">
+
   <title>Slide Stories</title>
 </head>
 
@@ -18,11 +20,11 @@
 
   <div id="slide">
     <div id="slide-elements">
-      <img src="./src/assets/imagem_1.jpg" alt="Lobo">
-      <img src="./src/assets/imagem_2.jpg" alt="Lobo">
-      <img src="./src/assets/imagem_3.jpg" alt="Lobo">
+      <img src="./src/assets/imagem1.jpg" alt="Lobo">
+      <img src="./src/assets/imagem2.jpg" alt="Lobo">
+      <img src="./src/assets/imagem3.jpg" alt="Lobo">
       <!-- O playsinline faz com que o vídeo rode no mobile sem maximizar a tela. -->
-      <video playsinline src="./src/assets/video.mp4"></video>
+      <video playsinline src="./src/assets/video1.mp4"></video>
     </div>
 
     <div id="slide-controls"></div>
